--- a/templates/bdc/editUser.html.twig
+++ b/templates/bdc/editUser.html.twig
@@ -6,13 +6,13 @@
     {{ form_start(form) }}
     <main class="container">
         <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="6" style="width: 50%">
-                3 sur 6
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="7" style="width: 42%">
+                3 sur 7
             </div>
         </div>
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <h1 class="primary-title">Etape 3 / 6 : informations du client</h1>
+                <h1 class="primary-title">Etape 3 : informations du client</h1>
             </div>
         </div>
         <div class="row bg-info align-items-center">
