--- a/templates/bdc/show.html.twig
+++ b/templates/bdc/show.html.twig
@@ -11,6 +11,11 @@
             {{ message }}
         </div>
     {% endfor %}
+    <div class="progress">
+        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="7" style="width: 71%">
+            5 sur 7
+        </div>
+    </div>
     <h1 class="primary-title">Etape 5 : signature du client</h1>
     <div class="row">
             <div class="col-3">
@@ -158,8 +163,15 @@
     <div class="row">
         <div class="col-12 mx-auto text-center form p-4">
             <p>Passer à l'étape suivante <span class="font-weight-bold">après avoir fait signer le client</span></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4 mx-auto text-left form p-4">
+            <a href="{{ path('takePhoto', { id: estimation.id}) }}" class="btn btn-dark"><- Précédent</a>
+        </div>
+        <div class="col-8 mx-auto text-right form p-4">
             <form action="{{ path('bdc_pdf', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
-                <input type="submit" name="submit" class="primary-button" value="Générer le bon de cession">
+                <input type="submit" name="submit" class="btn btn-success" value="Générer le bon de cession">
             </form>
         </div>
     </div>
