--- a/templates/bdc/takePhoto.html.twig
+++ b/templates/bdc/takePhoto.html.twig
@@ -10,15 +10,15 @@
             </div>
         {% endfor %}
         <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="6" style="width: 66%">
-                4 sur 6
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="7" style="width: 57%">
+                4 sur 7
             </div>
         </div>
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
                 <h1 class="primary-title">Etape 4 : carte d'identité</h1>
                 <p>Prendre en photo <span class="font-weight-bold">le recto de la carte d'identité</span> du client</p>
-                <form action="{{ path('takePhoto', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
+                <form action="{{ path('bdc_show', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
                     <input type="file" name="upload" accept="image/*" capture>
                     <input type="submit" name="submit" class="btn btn-info" value="Envoyer la photo">
                 </form>
