correction des fautes et tutoiment

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -15,10 +15,10 @@
     <div class="container">
         <div class="row">
             <div class="col-11">
-                <h4>Votre téléphone a t-il été immergé dans l'eau ?</h4>
+                <h4>Ton téléphone a t-il été immergé dans l'eau ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="Si votre téléphone est tombé dans l'eau, cochez 'oui'"
+                <img src="/images/info.png" alt="" title="Si ton téléphone est tombé dans l'eau, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
@@ -31,7 +31,7 @@
     <div class="container jumbotron">
         <div class="row">
             <div class="col-11">
-                <h4>Votre écran est-il endommagé ?</h4>
+                <h4>Ton écran est-il endommagé ?</h4>
             </div>
             <div class="col-1">
                 <img src="/images/info.png" alt="" title="une petite griffe est considérée comme endommagé"
@@ -49,7 +49,7 @@
                 <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="fissures, griffes, mauvais emboitement, cochez 'oui'"
+                <img src="/images/info.png" alt="" title="fissures, griffes, mauvais emboitement, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
@@ -61,11 +61,11 @@
     <div class="container jumbotron">
         <div class="row">
             <div class="col-11">
-                <h4>Avez vous des problèmes de charge au niveau de votre batterie ?</h4>
+                <h4>As-tu des problèmes de charge au niveau de la batterie ?</h4>
             </div>
             <div class="col-1">
                 <img src="/images/info.png" alt=""
-                     title="Si vous avez l'impression de devoir recherger votre téléphone tout les jours, cochez 'oui'"
+                     title="Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
@@ -77,10 +77,10 @@
     <div class="container">
         <div class="row">
             <div class="col-11">
-                <h4>Tous vos boutons sont-ils fonctionnels ?</h4>
+                <h4>Tous les boutons sont-ils fonctionnels ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="Si un de vos boutons ne fonctionne plus, cochez 'oui'"
+                <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
