--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -34,7 +34,7 @@
                 <h4>Ton écran est-il endommagé ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="une petite griffe est considérée comme endommagé"
+                <img src="/images/info.png" alt="" title="Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
