--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -49,7 +49,7 @@
                 <h4>La coque du téléphone est-elle endommagée ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="fissures, griffes, mauvais emboitement, coche 'oui'"
+                <img src="/images/info.png" alt="" title="Fissures, griffes, mauvais emboîtement, coche 'oui'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
