--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -80,7 +80,7 @@
                 <h4>Tous les boutons sont-ils fonctionnels ?</h4>
             </div>
             <div class="col-1">
-                <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'oui'"
+                <img src="/images/info.png" alt="" title="Si un de tes boutons ne fonctionne plus, coche 'non'"
                      class="w-50 h-50 d-inline">
             </div>
             <div class="col-4">
