--- a/templates/organisms/_delete_form.html.twig
+++ b/templates/organisms/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('organisms_delete', {'id': organism.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('organisms_delete', {'id': organism.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce partenaire?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ organism.id) }}">
     <button class="secondary-button">Supprimer</button>
