--- a/templates/organisms/edit.html.twig
+++ b/templates/organisms/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Edit Organisms{% endblock %}
+{% block title %}Modififer partenaire{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('admin') }}
@@ -10,9 +10,11 @@
 {% block body %}
     <h1 class="editTitle">Modifier Partenaire</h1>
 
-    {{ include('organisms/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a class="secondary-button editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
+    {{ include('organisms/_form.html.twig', {'button_label': 'Modifier'}) }}
+    <button class="secondary-button">Modifier</button>
+    {{ form_end(form) }}
 
     {{ include('organisms/_delete_form.html.twig') }}
+
+    <a class="secondary-button editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
 {% endblock %}
