--- a/templates/bdc/takePhoto.html.twig
+++ b/templates/bdc/takePhoto.html.twig
@@ -18,7 +18,7 @@
             <div class="col-12 mx-auto text-center form p-4">
                 <h1 class="primary-title">Etape 4 : carte d'identité</h1>
                 <p>Prendre en photo <span class="font-weight-bold">le recto de la carte d'identité</span> du client</p>
-                <form action="{{ path('bdc_show', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
+                <form action="{{ path('takePhoto', {'id': estimation.id}) }}" method="post" enctype="multipart/form-data">
                     <input type="file" name="upload" accept="image/*" capture>
                     <input type="submit" name="submit" class="btn btn-info" value="Envoyer la photo">
                 </form>
