--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -35,7 +35,7 @@
             <li class="organisms">
                 <a href="#">Organismes</a>
                 <a href="{{ path('organisms_index') }}" class="organismsLister">Listes des partenaires</a>
-                <a href="{{ path('adminregister_collector') }}" class="organismsActionsAdd">Ajouter un organisme</a>
+                <a href="{{ path('register_collector') }}" class="organismsActionsAdd">Ajouter un organisme</a>
                 <a href="{{ path('collects_index') }}" class="organismsListerCollector">Listes des collecteurs</a>
                 <a href="{{ path('collects_new') }}" class="organismsAddCollector">Ajouter un collecteur</a>
 
