--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -16,5 +16,5 @@
 
     {{ include('organisms/_delete_form.html.twig') }}
 
-    <a class="secondary-button editLink" href="{{ path('organisms_index') }}">Retour à la liste</a>
+    <a class="secondary-button editLink" href="{{ path('admin_organisms_index') }}">Retour à la liste</a>
 {% endblock %}
