--- a/templates/admin/index_organism.html.twig
+++ b/templates/admin/index_organism.html.twig
@@ -15,7 +15,7 @@
             {% for organism in organisms %}
 
                 <article>
-                    <a class="logo" href="{{ path('organisms_show', {'id' : organism.id}) }}">
+                    <a class="logo" href="{{ path('admin_organism_show', {'id' : organism.id}) }}">
                         <img title="{{ organism.organismName }}" src="/uploads/logos/{{ organism.logo }}" alt="{{ organism.organismName }}"></a>
 
                 </article>
