--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -66,7 +66,7 @@
             <div class="block">
                 <div>
                     <a href="{{ path('organisms_index') }}">Partenaires</a>
-                    <a href="{{ path('organisms_new') }}">Collecteurs</a>
+                    <a href="{{ path('collectors_index') }}">Collecteurs</a>
                     <a href="{{ path('organisms_index') }}">Collectes</a>
                     <a href="{{ path('adminregister_collector') }}">Matrice</a>
                     <a href="{{ path('adminregister_collector') }}">FAQ</a>
