--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -20,14 +20,18 @@
         <h1 class="titleAdmin">Bienvenue sur l'interface d'administration</h1>
     </div>
 </header>
-<div class="jumbotron">
-    <div class="container">
+    <div class="jumbotron">
+        <div id="nameSearch">
         {{ form_start(form) }}
+        </div>
         <input class="fourth-button" type="submit" placeholder="Go!">
         {{ form_end(form) }}
 
+        <div id="resultSearch">
+
+
+        </div>
     </div>
-</div>
 
 <main class="cards-admin">
     <div class="menu-admin">
