--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -69,7 +69,7 @@
                     <a href="{{ path('organisms_index') }}">Partenaires</a>
                     <a href="{{ path('organisms_new') }}">Collecteurs</a>
                     <a href="{{ path('organisms_index') }}">Collectes</a>
-                    <a href="{{ path('register_collector') }}">Matrice</a>
+                    <a href="#">Matrice</a>
                     <a href="{{ path('register_collector') }}">FAQ</a>
                 </div>
             </div>
