--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Modififer partenaire{% endblock %}
+{% block title %}Modifier partenaire{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('admin') }}
