Changement de chemin dans l'index admin

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -68,9 +68,9 @@
                 <div>
                     <a href="{{ path('organisms_index') }}">Partenaires</a>
                     <a href="{{ path('collectors_index') }}">Collecteurs</a>
-                    <a href="{{ path('organisms_index') }}">Collectes</a>
+                    <a href="{{ path('collects_index') }}">Collectes</a>
                     <a href="#">Matrice</a>
-                    <a href="{{ path('register_collector') }}">FAQ</a>
+                    <a href="{{ path('faq_index') }}">FAQ</a>
                 </div>
             </div>
         </li>
