List stocked PDF with date and link to estimation_show

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -68,8 +68,8 @@
                     <a href="{{ path('organisms_index') }}">Partenaires</a>
                     <a href="{{ path('organisms_new') }}">Collecteurs</a>
                     <a href="{{ path('organisms_index') }}">Collectes</a>
-                    <a href="{{ path('adminregister_collector') }}">Matrice</a>
-                    <a href="{{ path('adminregister_collector') }}">FAQ</a>
+                    <a href="#">Matrice</a>
+                    <a href="{{ path('register_collector') }}">FAQ</a>
                 </div>
             </div>
         </li>
