--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -1,16 +1,39 @@
 {% extends 'admin/index.html.twig' %}
 
 {% block title %}Liste des bons de cession stockés{% endblock %}
-{% block stylesheets %}
-    {{ parent() }}
-    {{ encore_entry_link_tags('bdcVueAdmin') }}
-{% endblock %}
 {% block body %}
-    <h1 class="primary-title">Liste des bons de cession stockés</h1>
-    <ul class="bdcCard">
-    {% for file in files %}
-        <li><a target="_blank" href="/../uploads/BDC/{{ file }}">{{ file }}</a></li>
-    {% endfor %}
-    </ul>
+    <main class="container">
+        <div class="row">
+            <div class="col-12 mx-auto text-center">
+                <h1 class="primary-title">Liste des bons de cession stockés</h1>
+            </div>
+        </div>
+        <div class="row bg-info align-items-center">
+            <div class="col-3 text-center font-weight-bold p-3">
+                Date de la collecte
+            </div>
+            <div class="col-5 text-center font-weight-bold">
+                Estimation d'origine
+            </div>
+            <div class="col-4 mx-auto text-left">
+                Consulter le fichier
+            </div>
+        </div>
+        {%  set number = 0 %}
+        {% for file in files %}
+        <div class="row bg-light align-items-center">
+            <div class="col-3 text-center p-2">
+                {{ dates[number] }}
+            </div>
+            <div class="col-5 text-center">
+                <a href="{{ path('estimations_show', {id: estimationIds[number]}) }}" title="">Estimation n°{{estimationIds[number]}}</a>
+            </div>
+            <div class="col-4 mx-auto text-left">
+                <a target="_blank" href="/../uploads/BDC/{{ file }}">Consulter  {{ file }}</a>
+            </div>
+        </div>
+            {% set number = number +1 %}
+        {% endfor %}
+    </main>
 {% endblock %}
 
