--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -35,7 +35,7 @@
                 <a href="{{ path('organisms_index') }}" class="organismsLister">Listes des partenaires</a>
                 <a href="{{ path('organisms_new') }}" class="organismsActionsAdd">Ajouter un organisme</a>
                 <a href="{{ path('organisms_index') }}" class="organismsListerCollector">Listes des collecteurs</a>
-                <a href="{{ path('adminregister_collector') }}" class="organismsAddCollector">Ajouter un collecteur</a>
+                <a href="{{ path('admin_register_collector') }}" class="organismsAddCollector">Ajouter un collecteur</a>
 
             </li>
             <li class="officialDocuments">
@@ -54,4 +54,3 @@
 {%  block javascripts %}
     {{ encore_entry_script_tags('admin') }}
 {% endblock %}
-
