--- a/templates/infos/bipbip.html.twig
+++ b/templates/infos/bipbip.html.twig
@@ -26,8 +26,8 @@
                     <p>A partir de 50.000 téléphones portables, on peut recycler 1 Kg d'or et 10 Kg d'argent sans
                     compter de nombreux métaux rares !</p>
                 </ul>
-                <img src="{{ asset('images/infos-bipbip.png') }}" alt="Chiffres BipBip" class="d-block float-none mx-auto">
-            </div>
+                {#<img src="{{ asset('images/infos-bipbip.png') }}" alt="Chiffres BipBip" class="d-block float-none mx-auto">
+            #}</div>
         </div>
     </main>
 {% endblock %}
