--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <li class="primary-title primary-title-menu"><a href="#" title="Acheter un téléphone">Acheter un tel</a></li>
                     <li class="primary-title primary-title-menu"><a href="#" title="Les points de collecte">Les points de collecte</a></li>
                     <li class="primary-title primary-title-menu"><a href="{{ path('add_message') }}" title="Organiser une collecte">Organiser une collecte</a></li>
-                    <li class="primary-title primary-title-menu"><a href="{{ path('show_faq') }}" title="Foire aux questions">FAQ</a></li>
+
                     <li class="primary-title primary-title-menu"><a href="{{ path('add_message') }}" title="Contacte-nous">Contacte-nous</a></li>
                 </ul>
                 <div class="user-infos-menu">
@@ -76,7 +76,7 @@
                 <li><a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">Qui sommes-nous ?</a></li>
                 <li><a href="{{ path('new_estimation') }}" title="Revendre ton tèl">Revendre ton tél</a></li>
                 <li><a href="{{ path('add_message') }}" title="Devenir organisateur de collecte">Tu veux devenir organisateur de collecte</a></li>
-                <li><a href="{{ path('show_faq') }}" title="FAQ">Besoin d'aide ?</a></li>
+               {# <li><a href="{{ path('faq_show') }}" title="FAQ">Besoin d'aide ?</a></li>#}
                 <li><a href="{{ path('add_message') }}" title="Contact">Contacte-nous</a></li>
                 <li>Ce que l'on oublie de lire
                      (<a href="{{ path('cgu') }}" title="Conditions Générales de Vente">CGV</a>
