--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -50,39 +50,51 @@
 </div>
 
 <nav class="menu-admin">
-    <ul class="icon-menu">
-        <li class="estimations">
-            <h2 class="title">Estimations</h2>
-            <div class="block">
-                <div>
-                    <a href="{{ path ('estimations_index') }}">Toutes</a>
-                    <a href="{{ path ('estimations_uncollected_index') }}">Non collectées</a>
-                    <a href="{{ path('estimations_collected_index') }}">Collectées</a>
-                    <a href="{{ path('estimations_unfinished_index') }}">Inachevées</a>
+        {% if app.user.roles[0] == "ROLE_COLLECTOR" %}
+        <ul class="icon-menu-collector">
+            <li>
+                <a href="{{ path('estimations_index') }}" class="secondary-button">Collecter</a>
+            </li>
+            <li>
+                <a href="{{ path('collects_index') }}" class="secondary-button">Ajouter une collecte</a>
+            </li>
+        </ul>
+        {% else %}
+        <ul class="icon-menu">
+            <li class="estimations">
+                <h2 class="title">Estimations</h2>
+                <div class="block">
+                    <div>
+                        <a href="{{ path ('estimations_index') }}">Toutes</a>
+                        <a href="{{ path ('estimations_uncollected_index') }}">Non collectées</a>
+                        <a href="{{ path('estimations_collected_index') }}">Collectées</a>
+                        <a href="{{ path('estimations_unfinished_index') }}">Inachevées</a>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="management">
-            <h2 class="title">Gestion</h2>
-            <div class="block">
-                <div>
-                    <a href="{{ path('organisms_index') }}">Partenaires</a>
-                    <a href="{{ path('organisms_new') }}">Collecteurs</a>
-                    <a href="{{ path('organisms_index') }}">Collectes</a>
-                    <a href="#">Matrice</a>
-                    <a href="{{ path('register_collector') }}">FAQ</a>
+            </li>
+            <li class="management">
+                <h2 class="title">Gestion</h2>
+                <div class="block">
+                    <div>
+                        <a href="{{ path('organisms_index') }}">Partenaires</a>
+                        <a href="{{ path('organisms_new') }}">Collecteurs</a>
+                        <a href="{{ path('organisms_index') }}">Collectes</a>
+                        <a href="#">Matrice</a>
+                        <a href="{{ path('register_collector') }}">FAQ</a>
+                    </div>
                 </div>
-            </div>
-        </li>
-        <li class="officialDocuments">
-            <h2 class="title">Documents</h2>
-            <div class="block">
-                <div>
-                    <a href="{{ path ('bdc_index') }}" class="officialDocumentsBc">Bons de cessions</a>
-                    <a href="#" class="officialDocumentsCi">Cartes d'identitées</a>
+            </li>
+            <li class="officialDocuments">
+                <h2 class="title">Documents</h2>
+                <div class="block">
+                    <div>
+                        <a href="{{ path ('bdc_index') }}" class="officialDocumentsBc">Bons de cessions</a>
+                        <a href="#" class="officialDocumentsCi">Cartes d'identitées</a>
+                    </div>
                 </div>
-            </div>
-        </li>
+            </li>
+        </ul>
+        {% endif %}
     </ul>
 </nav>
 {% endblock %}
