changement des langues suite commentiares PR

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -35,7 +35,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="13">no records found</td>
+                <td colspan="13">Aucun collecteur trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
