--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Informations collecteur{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h2>Informations Collecteur </h2>
 
     <table class="table">
         <tbody>
@@ -44,7 +44,7 @@
 
     <a href="{{ path('collectors_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('collectors_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('collectors_edit', {'id': user.id}) }}">Editer</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
