--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
     {{ encore_entry_link_tags('home') }}
 {% endblock %}
 
