--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -97,12 +97,15 @@ header{
     margin-top: 25px;
     margin-bottom: 20px;
     margin-left: 20px;
+    padding: 4px;
 
-    #search_nameSearch{
-        width: 30%;
-        height: 40%;
+    input#search_nameSearch{
+        width: 70%;
+        padding: 6px;
         border-radius: 5px;
     }
+
+
 }
 
 
@@ -266,5 +269,15 @@ header{
             }
         }
     }
-
 }
+.resultSearch a {
+    display : flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    margin-left: 40px;
+    margin-right: 25px;
+    font-size: 1.3rem;
+    font-style: italic;
+    text-decoration: none;
+    }
+
